--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@ They have protective effects against heart disease, lower blood sugar and choles
                   <div class="column col-md-8" id="cashew">
                   <p><h2>Not only do cashews have a lower fat content than most other nuts, approximately 82% of their fat is unsaturated fatty acids, plus about 66% making them heart-healthy. They are also extremely high in protein and vitamin E!</h2></p>
                   </div>
+
+                  <div class="row">
+                      <div class="column col-md-8" id="dairyfree">
+                      <p><img src="img/dairyfree.png"></p>
+                      </div>
+
         </div>
       </div>
     </div>
