--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
             <img class="img-fluid" alt="MILK." src="img/milk.png" srcset="img/milk.svg">
           </header>
         </div>
+      </div>
 
       <div class="row">
           <div class="column col-md-4" id="almond">
           <img class="img-fluid" alt="almond." src="img/almond.png" srcset="img/almond.svg">
           </div>
           <div class="column col-md-8" id="almond">
-          <p><h2>With six grams of protein per ounce, 12 different vitamins and minerals and a high amount of good-for-you
+          <p>With six grams of protein per ounce, 12 different vitamins and minerals and a high amount of good-for-you
             monounsaturated fat, almonds have a myriad of nutritional benefits.
-            They also happen to be a good source of magnesium.</h2></p>
+            They also happen to be a good source of magnesium.</p>
           </div>
 
           <div class="row">
@@ -33,9 +34,10 @@
               <img class="img-fluid" alt="coconut." src="img/coconut.png" srcset="img/coconut.svg">
               </div>
               <div class="column col-md-8" id="coconut">
-              <p><h2>Coconuts are high in healthy saturated fats that have different effects
-                than most other fats in your diet. These fats can boost fat burning and provide your body and brain with quick energy.</h2></p>
+              <p>Coconuts are high in healthy saturated fats that have different effects
+                than most other fats in your diet. These fats can boost fat burning and provide your body and brain with quick energy.</p>
               </div>
+            </div>
 
 
   <div class="row">
@@ -43,46 +45,48 @@
       <img class="img-fluid" alt="HEMP." src="img/hemp.png" srcset="img/hemp.svg">
       </div>
       <div class="column col-md-8" id="hemp">
-      <p><h2>Many people consider hemp seeds to be a superfood. The seeds have a rich nutritional profile and
+      <p>Many people consider hemp seeds to be a superfood. The seeds have a rich nutritional profile and
         provide a range of health benefits. Although hemp seeds come from the Cannabis plant,
-        they do not produce a mind-altering effect. They are rich in protein, fiber, and healthful fatty acids.</h2></p>
+        they do not produce a mind-altering effect. They are rich in protein, fiber, and healthful fatty acids.</p>
       </div>
-
+</div>
       <div class="row">
           <div class="column col-md-4" id="hazelnut">
           <img class="img-fluid" alt="HAZELNUT." src="img/hazelnut.png" srcset="img/hazelnut.svg">
           </div>
           <div class="column col-md-8" id="hazelnut">
-          <p><h2>Hazelnuts are rich in unsaturated fats, high in magnesium, calcium and vitamin B.
+          <p>Hazelnuts are rich in unsaturated fats, high in magnesium, calcium and vitamin B.
             Hazelnuts are good for your heart, help reduce the risk of cancer,
-            and aid in muscle, skin, bone, joint and digestive health.</h2></p>
+            and aid in muscle, skin, bone, joint and digestive health.</p>
           </div>
-
+</div>
           <div class="row">
               <div class="column col-md-4" id="oats">
               <img class="img-fluid" alt="oats." src="img/oats.png" srcset="img/oats.svg">
               </div>
               <div class="column col-md-8" id="oats">
-              <p><h2>Oats are a very good source of fiber, and are high in vitamins, minerals and antioxidants.
-They have protective effects against heart disease, lower blood sugar and cholesterol levels, and provide easy energy.</h2></p>
+              <p>Oats are a very good source of fiber, and are high in vitamins, minerals and antioxidants.
+They have protective effects against heart disease, lower blood sugar and cholesterol levels, and provide easy energy.</p>
               </div>
-
+</div>
               <div class="row">
                   <div class="column col-md-4" id="cashew">
                   <img class="img-fluid" alt="CASHEW." src="img/cashew.png" srcset="img/cashew.svg">
                   </div>
                   <div class="column col-md-8" id="cashew">
-                  <p><h2>Not only do cashews have a lower fat content than most other nuts, approximately 82% of their fat is unsaturated fatty acids, plus about 66% making them heart-healthy. They are also extremely high in protein and vitamin E!</h2></p>
+                  <p>Not only do cashews have a lower fat content than most other nuts, approximately 82% of their fat is unsaturated fatty acids, plus about 66% making them heart-healthy.
+                    They are also extremely high in protein and vitamin E!</p>
+                  </div>
                   </div>
 
-                  <div class="row">
-                      <div class="column col-md-8" id="dairyfree">
-                      <p><img src="img/dairyfree.png"></p>
+                <div class="row">
+                      <div class="column col-md-4" id="dairyfree">
+                      <img class="img-fluid" alt="DAIRYFREE." src="img/dairyfree.png" srcset="img/dairyfree.svg">
                       </div>
-
-        </div>
-      </div>
-    </div>
+                      <div class="column col-md-8" id="dairyfree">
+                      <p>Clear skin, healthy digestion, weight loss and more! See what going dairy free can do for you.</p>
+                      </div>
+                      </div>
 
   </body>
 </html>
